Add Telegram integration and Duckling time extractor

--- a/credentials.yml
+++ b/credentials.yml
@@ -6,6 +6,10 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
+telegram:
+  access_token: "7850799456:AAGf7q7GgTyhSCJ-vgLvQyxAXzTauv-OkDs"
+  verify: "ElderCare_bot"
+  webhook_url: "https://f273-212-216-243-187.ngrok-free.app/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
@@ -30,4 +34,4 @@ rest:
 # This entry is needed if you are using Rasa Enterprise. The entry represents credentials
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
-  url: "http://localhost:5002/api"
+  url: "http://localhost:5005/api"
