--- a/data/rules.yml
+++ b/data/rules.yml
@@ -30,7 +30,7 @@ rules:
     steps:
       - intent: service_detail
       - action: action_service_detail
-  
+
   - rule: Fornisci informazioni sulla applicazione quando l'utente lo chiede
     steps:
       - intent: app_detail
@@ -50,32 +50,47 @@ rules:
     steps:
       - intent: security_app_detail
       - action: utter_security_app_detail
-  
+
   - rule: Attiva il form della prenotazione del servizio
     steps:
-    - intent: request_booking_form
-    - action: booking_form
-    - active_loop: booking_form
+      - intent: request_booking_form
+      - action: booking_form
+      - active_loop: booking_form
 
   - rule: Manda il form della prenotazione del servizio
     condition:
-    - active_loop: booking_form
+      - active_loop: booking_form
     steps:
-    - action: booking_form
-    - active_loop: null
-    - slot_was_set:
-      - requested_slot: null
-    - action: utter_submit
-    - action: utter_booking_result
+      - action: booking_form
+      - active_loop: null
+      - slot_was_set:
+          - requested_slot: null
+      - action: utter_submit
+      - action: utter_booking_result
 
   - rule: Interruzione nel form della prenotazione
     condition:
-    # Condition that form is active.
-    - active_loop: booking_form
+      # Condition that form is active.
+      - active_loop: booking_form
     steps:
-    # This unhappy path handles the case of an intent `bot_challenge`.
-    - intent: bot_challenge
-    - action: utter_iamabot
-    # Return to form after handling the `bot_challenge` intent
-    - action: booking_form
-    - active_loop: booking_form
+      # This unhappy path handles the case of an intent `bot_challenge`.
+      - intent: bot_challenge
+      - action: utter_iamabot
+      # Return to form after handling the `bot_challenge` intent
+      - action: booking_form
+      - active_loop: booking_form
+
+  - rule: Saluta quando l'utente dice arrivederci
+    steps:
+      - intent: goodbye
+      - action: utter_goodbye
+
+  - rule: Fuori contesto
+    steps:
+    - intent: out_of_scope
+    - action: utter_out_of_scope
+
+  - rule: Fallback predetto da FallbackClassifier
+    steps:
+    - intent: nlu_fallback
+    - action: utter_fallback
