--- a/domain.yml
+++ b/domain.yml
@@ -29,31 +29,40 @@ entities:
 
 responses:
   utter_greet:
-  - text: "Ciao! Sono ElderCare, il chatbot di assistenza per anziani. Posso aiutarti fornendo informazioni generali sulla piattaforma, sui tipi di servizi, su come effettuare una nuova prenotazione o consultare lo storico dei servizi richiesti. Come posso aiutarti oggi?"
+    - text: "Ciao! Sono ElderCare, il chatbot di assistenza per anziani. Posso aiutarti fornendo informazioni generali sulla piattaforma, sui tipi di servizi, su come effettuare una nuova prenotazione o consultare lo storico dei servizi richiesti. Come posso aiutarti oggi?"
   utter_goodbye:
-  - text: "Grazie per aver usufruito dei servizi di ElderCare. A presto!"
+    - text: "Grazie per aver usufruito dei servizi di ElderCare. A presto!"
   utter_happy:
-  - text: "Sono felice di aver reso la tua giornata migliore!"
+    - text: "Sono felice di aver reso la tua giornata migliore!"
   utter_cheer_up:
-  - text: "Sono qui per aiutarti. Cosa posso fare per rendere la tua giornata migliore?"
+    - text: "Sono qui per aiutarti. Cosa posso fare per rendere la tua giornata migliore?"
   utter_iamabot:
-  - text: "Sono un bot, creato con Rasa."
+    - text: "Sono un bot, creato con Rasa."
   utter_ask_continue_booking:
-  - text: "Vuoi davvero interrompere la prenotazione?"
+    - text: "Vuoi davvero interrompere la prenotazione?"
   utter_next_action:
-  - text: "Cosa vuoi fare ora? Posso aiutarti fornendo informazioni generali sulla piattaforma, sui tipi di servizi, su come effettuare una nuova prenotazione o consultare lo storico dei servizi richiesti."
+    - text: "Cosa vuoi fare ora? Posso aiutarti fornendo informazioni generali sulla piattaforma, sui tipi di servizi, su come effettuare una nuova prenotazione o consultare lo storico dei servizi richiesti."
   utter_submit:
-  - text: "Prenotazione effettuata con successo!"
+    - text: "Prenotazione effettuata con successo!"
   utter_booking_result:
-  - text: "Ecco i dettagli della tua prenotazione: Servizio: {service}, Luogo: {location}, Data e ora: {time}, Necessità di trasporto: {car}, Necessità di assistenza medica: {med}, Operatore assegnato: {operator}."
+    - text: "Ecco i dettagli della tua prenotazione: Servizio: {service}, Luogo: {location}, Data e ora: {time}, Necessità di trasporto: {car}, Necessità di assistenza medica: {med}, Operatore assegnato: {operator}."
   utter_app_detail:
-  - text: "ElderCare è un'app nata per assistere gli anziani che rimangono da soli. Per evitare ciò è possibile effettuare una prenotazione di vari servizi di assistenza che verrà poi accettata da un nostro volontario. Questi ragazzi svolgono tale compito senza alcuna remunerazione economica mettendo il benessere comune al primo posto."
+    - text: "ElderCare è un'app nata per assistere gli anziani che rimangono da soli. Per evitare ciò è possibile effettuare una prenotazione di vari servizi di assistenza che verrà poi accettata da un nostro volontario. Questi ragazzi svolgono tale compito senza alcuna remunerazione economica mettendo il benessere comune al primo posto."
   utter_history_app_detail:
-  - text: "Sono stata sviluppata da un team di studenti del corso di Ingegneria informatica dell'università politecnica delle Marche. Il progetto è stato realizzato nell'ambito del corcorso HACK-AI-TON 2024."
+    - text: "Sono stata sviluppata da un team di studenti del corso di Ingegneria informatica dell'università politecnica delle Marche. Il progetto è stato realizzato nell'ambito del corcorso HACK-AI-TON 2024."
   utter_operator_app_detail:
-  - text: "Gli operatori sono volontari che si offrono di assistere gli anziani che rimangono da soli, quindi non sono previsti costi per chi richiede il servizio. Questi ragazzi svolgono tale compito senza alcuna remunerazione economica. Tuttavia al raggiungimento di un determinato numero di ore, ricevono buoni pasto e sconti presso vari negozi"
+    - text: "Gli operatori sono volontari che si offrono di assistere gli anziani che rimangono da soli, quindi non sono previsti costi per chi richiede il servizio. Questi ragazzi svolgono tale compito senza alcuna remunerazione economica. Tuttavia al raggiungimento di un determinato numero di ore, ricevono buoni pasto e sconti presso vari negozi"
   utter_security_app_detail:
-  - text: "Per garantire la sicurezza degli anziani, gli operatori vengono sottoposti a controlli preventivi ed è necessario fornire tutti i documenti necessari. Inoltre, è possibile visualizzare le recensioni degli operatori e lasciare la propria valutazione dopo l'intervento. Qualora sorgessero dei problemi non esitate a contattarci, siamo sempre a disposizione per risolvere qualsiasi problema."
+    - text: "Per garantire la sicurezza degli anziani, gli operatori vengono sottoposti a controlli preventivi ed è necessario fornire tutti i documenti necessari. Inoltre, è possibile visualizzare le recensioni degli operatori e lasciare la propria valutazione dopo l'intervento. Qualora sorgessero dei problemi non esitate a contattarci, siamo sempre a disposizione per risolvere qualsiasi problema."
+  utter_out_of_scope:
+    - text: Scusa, non posso gestire questa richiesta.
+  utter_fallback:
+    - text: Non credo di aver capito, puoi ripetere?
+    - text: Come?
+    - text: Puoi ripetere?
+    - text: Non ho capito
+  utter_default:
+  - text: Questa non l'ho proprio capita...
 
 slots:
   service:
@@ -80,16 +89,16 @@ slots:
     type: bool
     influence_conversation: true
     mappings:
-    - type: from_intent
-      value: true
-      intent: affirm
-      conditions:
+      - type: from_intent
+        value: true
+        intent: affirm
+        conditions:
           - active_loop: booking_form
             requested_slot: car
-    - type: from_intent
-      value: false
-      intent: deny
-      conditions:
+      - type: from_intent
+        value: false
+        intent: deny
+        conditions:
           - active_loop: booking_form
             requested_slot: car
   med:
@@ -120,17 +129,17 @@ slots:
   operator:
     type: text
     mappings:
-    - type: custom
-      action: action_assign_operator
+      - type: custom
+        action: action_assign_operator
 
 forms:
   booking_form:
     required_slots:
-    - service
-    - location
-    - time
-    - car
-    - med
+      - service
+      - location
+      - time
+      - car
+      - med
 
 actions:
   - action_service_list_info
