Add time/date, clean useless custom actions, pruned wrong stories

--- a/credentials.yml
+++ b/credentials.yml
@@ -7,7 +7,7 @@ rest:
 #  # require any credentials
 
 telegram:
-  access_token: "7850799456:AAGf7q7GgTyhSCJ-vgLvQyxAXzTauv-OkDs"
+  access_token: "${TELEGRAM_TOKEN}"
   verify: "ElderCare_bot"
   webhook_url: "https://f273-212-216-243-187.ngrok-free.app/webhooks/telegram/webhook"
 
