--- a/data/rules/faq.yml
+++ b/data/rules/faq.yml
@@ -31,3 +31,13 @@ rules:
     steps:
       - intent: security_app_detail
       - action: utter_security_app_detail
+
+  - rule: Fornisci informazioni sulla lista dei servizi quando l'utente lo chiede
+    steps:
+      - intent: service_list_info
+      - action: action_service_list_info
+
+  - rule: Fornisci dettagli sul servizio quando l'utente lo chiede
+    steps:
+      - intent: service_detail
+      - action: action_service_detail
