--- a/credentials.yml
+++ b/credentials.yml
@@ -7,9 +7,9 @@ rest:
 #  # require any credentials
 
 telegram:
-  access_token: "${TELEGRAM_TOKEN}"
+  access_token: "7850799456:AAGf7q7GgTyhSCJ-vgLvQyxAXzTauv-OkDs"
   verify: "ElderCare_bot"
-  webhook_url: "https://f273-212-216-243-187.ngrok-free.app/webhooks/telegram/webhook"
+  webhook_url: "https://df24-79-41-20-153.ngrok-free.app/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
