--- a/data/rules/booking_form.yml
+++ b/data/rules/booking_form.yml
@@ -2,6 +2,8 @@ version: "3.1"
 
 rules:
   - rule: Attiva il form della prenotazione del servizio
+    condition:
+      - active_loop: null
     steps:
       - intent: request_booking_form
       - action: booking_form
